--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 740px; top: 0px;">
             <div class="portfolio-wrap">
-              <img src="assets/img/certification/Udemy.jpg" class="img-fluid" alt="" width="1023px" height="572px">
+              <img src="assets/img/certification/Udemy.jpg
+" class="img-fluid" alt="" width="1023px" height="572px">
               <div class="portfolio-info">
                 <h4>Digital Marketing with Google</h4>
                 <div class="portfolio-links">
